ARTEMIS-5018 eliminate deprecated use of Class.newInstance